Revert "fixing CARBON-14919"
This reverts commit 2d16933695e5a8c7da446fefd128c895ac63fdc5, reversing
changes made to cd3c3fedfac5ccc3cee4af7de2af1c8c123b361c.